--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ body {
   align-items: center;
 }
 
+body h1 {
+  font-size: 2rem;
+  padding-top: 20px;
+}
+
 .calender {
   width: 500px;
   height: 500px;
@@ -114,6 +119,10 @@ body {
     column-gap: 3px;
   }
 
+  body h1 {
+    font-size: 1.5rem;
+  }
+
   .head h2 {
     font-size: 1.5rem;
     margin-bottom: 15px;
@@ -130,5 +139,17 @@ body {
   }
   .head i {
     font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .head {
+    height: 20%;
+  }
+  .dates {
+    height: 60%;
+  }
+  .dates h4 {
+    height: 45px;
   }
 }
